# prism

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
sandbox/: CMakeLists.txt
sandbox/00_hello_world/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h
sandbox/01_offscreen/: CMakeLists.txt  renderer.cpp  renderer.h
sandbox/02_compute_pipeline/: CMakeLists.txt  renderer.cpp  renderer.h
sandbox/02_compute_pipeline/shaders/: raytrace.comp.glsl  raytrace2.comp.glsl
sandbox/02_validation_layers/: 02_validation_layers.cpp  02_validation_layers.h
sandbox/03_graphics_pipeline/: main.cpp  renderer.cpp  renderer.h
sandbox/03_physical_device_selection/: 03_physical_device_selection.cpp  03_physical_device_selection.h
sandbox/04_logical_device/: 04_logical_device.cpp  04_logical_device.h  main.cpp
sandbox/04_render_frame/: renderer.cpp  renderer.h
sandbox/05_render_context/: main.cpp  renderer.cpp  renderer.h
sandbox/05_window_surface/: 05_window_surface.cpp  05_window_surface.h  main.cpp
sandbox/06_shader_input/: renderer.cpp  renderer.h
sandbox/06_swap_chain_creation/: 06_swap_chain_creation.cpp
sandbox/07_image_views/: 07_image_views.cpp  main.cpp
sandbox/07_texture/: renderer.cpp  renderer.h
sandbox/07_texture/shaders/: shader.frag.glsl
sandbox/08_depth/: renderer.cpp  renderer.h
sandbox/08_depth/shaders/: shader.vert.glsl
sandbox/08_graphics_pipeline/: 08_graphics_pipeline.cpp  main.cpp
sandbox/09_shader_modules/: 09_shader_modules.cpp  09_shader_modules.h  main.cpp
sandbox/10_fixed_functions/: 10_fixed_functions.cpp  10_fixed_functions.h  main.cpp
sandbox/11_render_passes/: 11_render_passes.cpp  11_render_passes.h  main.cpp
sandbox/12_graphics_pipeline_complete/: 12_graphics_pipeline_complete.cpp  12_graphics_pipeline_complete.h  main.cpp
sandbox/13_framebuffers/: 13_framebuffers.cpp  main.cpp
sandbox/14_command_buffers/: 14_command_buffers.cpp  14_command_buffers.h  main.cpp
sandbox/15_hello_triangle/: 15_hello_triangle.cpp  15_hello_triangle.h
sandbox/16_frames_in_flight/: 16_frames_in_flight.cpp  16_frames_in_flight.h  main.cpp
sandbox/17_swap_chain_recreation/: 17_swap_chain_recreation.cpp  17_swap_chain_recreation.h  main.cpp
sandbox/18_shader_input/: 18_shader_input.cpp  18_shader_input.h  main.cpp
sandbox/99_final/: final.cpp  final.h  main.cpp  shader.vert
src/: CMakeLists.txt
src/comet/: application.cpp  application.h  hello_world.cpp  hello_world.h  pch.h
src/comet/core/: application.cpp  filesystem.cpp  filesystem.h  log.cpp  log.h  window.cpp  window.h
src/comet/platform/: glfw_window.cpp  glfw_window.h  window.cpp  window.h
src/comet/vulkan/: acceleration_structure.cpp  acceleration_structure.h  acceleration_structure_geometry.cpp  acceleration_structure_geometry.h  acceleration_structure_instance.cpp  acceleration_structure_instance.h  allocation.cpp_  allocation.h_  allocator.cpp_  allocator.h_  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  common.cpp  common.h  compute_pipeline.cpp  compute_pipeline.h  context.cpp_  context.h_  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device.cpp  device.h  device_extension_functions.cpp  device_extension_functions.h  device_features.cpp  device_features.h  device_memory.cpp  device_memory.h  error.cpp  error.h  exception.cpp  exception.h  (+29 more)
src/comet/vulkan copy/: acceleration_structure.cpp  acceleration_structure.h  acceleration_structure_geometry.cpp  acceleration_structure_geometry.h  acceleration_structure_instance.cpp  acceleration_structure_instance.h  allocation.cpp_  allocation.h_  allocator.cpp_  allocator.h_  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  common.cpp  common.h  compute_pipeline.cpp  compute_pipeline.h  context.cpp_  context.h_  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device.cpp  device.h  device_extension_functions.cpp  device_extension_functions.h  device_features.cpp  device_features.h  device_memory.cpp  device_memory.h  error.cpp  error.h  exception.cpp  exception.h  (+28 more)
src/prism/: pch.h
src/prism/core/: application.cpp  application.h  filesystem.cpp  filesystem.h  log.cpp  log.h
src/prism/platform/: glfw_window.cpp  glfw_window.h  (+2 more)
vulkan_guide/: CMakeLists.txt
vulkan_guide/chapter0/: CMakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h
vulkan_guide/chapter1/: CMakeLists.txt  vk_engine.cpp  vk_engine.h  vk_initializer.cpp  vk_initializer.h
vulkan_tutorial/: 00_base_code.cpp  01_instance_creation.cpp  02_validation_layers.cpp  CMakeLists.txt
vulkan_tutorial/02_validation_layers/: 02_validation_layers.cpp  02_validation_layers.h  main.cpp
vulkan_tutorial/03_physical_device_selection/: 03_physical_device_selection.cpp  03_physical_device_selection.h  main.cpp
vulkan_tutorial/04_logical_device/: 04_logical_device.cpp
vulkan_tutorial/05_window_surface/: 05_window_surface.cpp
vulkan_tutorial/06_swap_chain_creation/: 06_swap_chain_creation.cpp  06_swap_chain_creation.h  main.cpp
vulkan_tutorial/07_image_views/: 07_image_views.cpp  07_image_views.h
vulkan_tutorial/08_graphics_pipeline/: 08_graphics_pipeline.cpp  08_graphics_pipeline.h
vulkan_tutorial/09_shader_modules/: 09_shader_modules.cpp  complie.bat
vulkan_tutorial/10_fixed_functions/: 10_fixed_functions.cpp
vulkan_tutorial/11_render_passes/: 11_render_passes.cpp
vulkan_tutorial/12_graphics_pipeline_complete/: 12_graphics_pipeline_complete.cpp
vulkan_tutorial/13_framebuffers/: 13_framebuffers.cpp  13_framebuffers.h
vulkan_tutorial/14_command_buffers/: 14_command_buffers.cpp
vulkan_tutorial/15_hello_triangle/: 15_hello_triangle.cpp  main.cpp
vulkan_tutorial/16_frames_in_flight/: 16_frames_in_flight.cpp
vulkan_tutorial/17_swap_chain_recreation/: 17_swap_chain_recreation.cpp
vulkan_tutorial/18_shader_input/: 18_shader_input.cpp  18_shader_input.h  18_shader_vertex_buffer.vert
(+100 files in other folders)
